--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,6 +1,6 @@
-name: speed-test
+name: bartaz-snap-build-test
 version: 1.7.0.1
-summary: Test your internet connection speed and ping using speedtest.net from the CLI
+summary: This is just a test based on speed-test-snap... Test your internet connection speed and ping using speedtest.net from the CLI
 description: |
   Test your internet connection speed and ping using speedtest.net from the CLI.
   
