--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: bartaz-snap-build-test-2
+name: bartaz-snap-build-test
 version: 1.7.0.1
 summary: This is just a test based on speed-test-snap...
 description: |
