--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -7,7 +7,7 @@ description: |
   Repackaged as snap from npm speed-test module:
   https://www.npmjs.com/package/speed-test 
 
-confinement: strict
+confinement: devmode
 
 apps:
   speed-test:
