Try built that fails to release

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -3,7 +3,7 @@ version: 1.8.0
 summary: This is just a test based on speed-test-snap...
 description: This is just a test description
 
-confinement: devmode
+confinement: classic
 
 apps:
   speed-test:
